# 2D-mathematical-figures

./: CMakeLists.txt  README.md  application.cpp  application.h  circle.cpp  circle.h  graphobj.cpp  graphobj.h  main.cpp  point.cpp  point.h  rectangle.cpp  rectangle.h  scene.cpp  scene.h  triangle.cpp  triangle.h
